getall fix and dbname changed
